# music-analize

./: .gitignore  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt
api/: main.py  schemas.py
cli/: __init__.py  analyze.py
comparator/: __init__.py  divergences.py  stats.py
config/: __init__.py  settings.py  settings.yaml
data/: __init__.py  build_features.py  robustness.py  validate_dataset.py
features/: __init__.py  base_features.py  embeddings.py  extractor.py  spectral.py
ingestion/: __init__.py  loader.py  preprocessing.py
models/: __init__.py  authenticity_model.py  evaluate.py  genre_model.py  train.py  trainer.py
music_analize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reporting/: __init__.py  plots.py  report_builder.py
tests/: test_config.py  test_feature_extractor.py  test_ingestion.py  test_validators.py
utils/: __init__.py  constants.py  exceptions.py  logging_config.py  validators.py
